renamed startPosition in token to position and removed endPosition